--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <form action="/action_page.php">
     <div class="container">
-      <h1>Register</h1>
+      <h1 class="display-1">Bock Bock</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
 
